[package]
name = "swap2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
dotenv = "0.15.0"
rand = "0.8.5"
serde = "1.0.213"
serde_json = "1.0.132"
solana-client = "2.0.13"
solana-sdk = "2.0.13"
spl-associated-token-account = "5.0.1"
spl-token = "6.0.0"
tokio = "1.41.0"
tracing = "0.1.40"
